# DSA-Leetcode

./: .gitignore  CMakeLists.txt  README.md  challenge.cpp  git_commands.txt  package-lock.json  test.cpp
Binary Search/: BST.cpp  BSTdecreasing.cpp
Binary Search(day 22)/: BST.cpp  BSTdecreasing.cpp
Insertion Sort/: Reverse_insertsort.cpp
JS + TS/: LCA_cycle.ts  balanced_BT.jsx  count_leaves.jsx  cousin_check.jsx  f_l_element.tsx  invert_tree.jsx  largest_each_lvl_BT.jsx  max_depth.jsx  populating_right_node.tsx  preorder.jsx  right_view.tsx  size_bt.jsx
Leetcode/: Add_Digits.cpp  Armstrong_no.cpp  Binary_search.cpp  II_water_bottle.cpp  Linear_search.cpp  Missing_no.cpp  Reverse_array.cpp  SIngle_number_III.cpp  Second_largest.cpp  Seg_01.cpp  Single_number.cpp  Single_number_II.cpp  Sum_of_square_no.cpp  TotalBishop_moves.cpp  Trailing_zeroes.cpp  Trapping_rain_water.cpp  Two_sum.cpp  Two_sum_sorted.cpp  apply_op_to_array.cpp  avg_waiting_time.cpp  calc_sum_of_string.cpp  capitalize.cpp  challenge2.cpp  chk_sorted_rotated.cpp  cnt_abs_pairs_k.cpp  cnt_coloured_cells.cpp  cnt_hills_valley.cpp  complementof10.cpp  count_distinct_int_after_reverse.cpp  count_no_consistent.cpp  couple_holding_hand.cpp  crawler_log_folder.cpp  cube_root.cpp  digit_game_compi.cpp  double_reversal_check.cpp  fib_series.cpp  find_all_duplicates.cpp  find_the_peaks.cpp  finding_3_digit_no.cpp  first_bad_version.cpp  (+57 more)
Linked List/: Insert_particular.cpp  Insertion_at_end.cpp  Insertion_at_start.cpp  Insertion_recursive.cpp  Recursive_delet_part.cpp  Reverse_Inserting_recursive.cpp  (+4 more)
(+418 files in other folders)
