cmake_minimum_required(VERSION 3.27)
project(DSA)

set(CMAKE_CXX_STANDARD 14)

add_executable(DSA
        "Binary Search(day 22)/BST.cpp"
        "Binary Search(day 22)/BSTdecreasing.cpp"
        "operators1(day12)/agecheck.cpp"
        "operators1(day12)/signedcheck.cpp"
        "operators1(day12)/tempcheck.cpp"
        "operators1(day12)/tempCodeRunnerFile.cpp"
        "operators1(day12)/three.cpp"
        "pattern2(day9)/1.cpp"
        "pattern2(day9)/2.cpp"
        "pattern2(day9)/3.cpp"
        "pattern2(day9)/4.cpp"
        "pattern4(day11)/ABAtriangle.cpp"
        "pattern4(day11)/kiteshape.cpp"
        "pattern4(day11)/numbertriangle.cpp"
        "pattern4(day11)/oppositestartriange.cpp"
        "pattern4(day11)/spider.cpp"
        "pattern4(day11)/squarestar.cpp"
        "pattern4(day11)/tempCodeRunnerFile.cpp"
        "pattern4(day11)/trianglestar.cpp"
        "patterns1(day8)/1.cpp"
        "patterns1(day8)/2.cpp"
        "patterns1(day8)/3.cpp"
        "patterns1(day8)/4.cpp"
        "patterns3(day10)/1.cpp"
        "patterns3(day10)/2.cpp"
        "patterns3(day10)/3.cpp"
        "patterns3(day10)/4.cpp")
